--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,8 @@ kafka.topic.dlq=tp8-dlq
 # Logging
 logging.level.com.example.tpdlq=INFO
 logging.level.org.springframework.kafka=INFO
+
+# Actuator / Metrics
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
+management.endpoints.web.base-path=/actuator
