add Dockerfile and docker-compose stack

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.application.name=tp-dlq
 server.port=8080
 
 # Kafka Configuration
-spring.kafka.bootstrap-servers=localhost:9092
+# Default: kafka (Docker service name). Override with SPRING_KAFKA_BOOTSTRAP_SERVERS env var for local dev (localhost:9092).
+spring.kafka.bootstrap-servers=kafka:29092
 
 # Kafka Producer Configuration
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
@@ -13,7 +14,8 @@ spring.kafka.producer.acks=all
 spring.kafka.producer.retries=3
 
 # Kafka Consumer Configuration
-spring.kafka.consumer.bootstrap-servers=localhost:9092
+# Note: matches producer bootstrap-servers above (kafka:29092 for Docker, override for local dev)
+spring.kafka.consumer.bootstrap-servers=kafka:29092
 spring.kafka.consumer.group-id=tp8-consumer-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
