add Prometheus ,Grafana

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,43 @@ services:
       retries: 3
       start_period: 40s
 
+  # Prometheus for metrics monitoring
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+    networks:
+      - tp-dlq-network
+    depends_on:
+      - tp-dlq
+
+  # Grafana for metrics visualization
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_USER=admin
+    volumes:
+      - grafana-storage:/var/lib/grafana
+    networks:
+      - tp-dlq-network
+    depends_on:
+      - prometheus
+
 networks:
   tp-dlq-network:
     driver: bridge
+
+volumes:
+  grafana-storage:
