--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,6 @@ logging.level.com.example.tpdlq=INFO
 logging.level.org.springframework.kafka=INFO
 
 # Actuator / Metrics
-management.endpoints.web.exposure.include=health,info,metrics
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=always
 management.endpoints.web.base-path=/actuator
